{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 525,
  "lineage": "b3469963-870e-c74e-b1d5-24b89d74a224",
  "resources": [
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c64f7b4062b0a21",
            "arn": "arn:aws:ec2:ap-southeast-1:438723512299:instance/i-077689d9b0f6d9827",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "test_profile",
            "id": "i-077689d9b0f6d9827",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ap_southeast_1_key_pair",
            "monitoring": false,
            "primary_network_interface_id": "eni-0b2ceec679363d59a",
            "private_dns": "ip-10-63-1-155.ap-southeast-1.compute.internal",
            "private_ip": "10.63.1.155",
            "public_dns": "ec2-3-1-221-212.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.221.212",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ebaff8d52d5df0cd",
                "volume_size": 16,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a00410348dcf61c1",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e740e6a59cd19cde"
            ]
          },
          "dependencies": [
            "module.app.aws_db_instance.postgre",
            "module.app.aws_iam_instance_profile.test_profile",
            "module.app.aws_key_pair.ap_southeast_1_key_pair",
            "module.app.aws_security_group.ssh_http_allowed",
            "module.app.aws_ssm_parameter.mydb_password",
            "module.app.aws_subnet.prod_subnet_public_1"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0fb273a5a9ea33793",
            "owner_id": "438723512299",
            "vpc_id": "vpc-02397d6bb3322111a"
          },
          "dependencies": [
            "module.app.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_public_crt",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04d8efc9ce49dc559",
            "owner_id": "438723512299",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fb273a5a9ea33793",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-02397d6bb3322111a"
          },
          "dependencies": [
            "module.app.aws_internet_gateway.prod_igw",
            "module.app.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_crta_public_subnet_1",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d007fdfabf0825e1",
            "route_table_id": "rtb-04d8efc9ce49dc559",
            "subnet_id": "subnet-0a00410348dcf61c1"
          },
          "dependencies": [
            "module.app.aws_internet_gateway.prod_igw",
            "module.app.aws_route_table.prod_public_crt",
            "module.app.aws_subnet.prod_subnet_public_1",
            "module.app.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_connection_allowed",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:438723512299:security-group/sg-0341a1317e4b5090a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0341a1317e4b5090a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.63.1.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20200122194158630300000003",
            "name_prefix": null,
            "owner_id": "438723512299",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02397d6bb3322111a"
          },
          "dependencies": [
            "module.app.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_http_allowed",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:438723512299:security-group/sg-0e740e6a59cd19cde",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e740e6a59cd19cde",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20200122194158628700000002",
            "name_prefix": null,
            "owner_id": "438723512299",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-02397d6bb3322111a"
          },
          "dependencies": [
            "module.app.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_subnet_private_1",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:438723512299:subnet/subnet-02cf9db7ea9d2d898",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.63.2.0/24",
            "id": "subnet-02cf9db7ea9d2d898",
            "map_public_ip_on_launch": false,
            "owner_id": "438723512299",
            "vpc_id": "vpc-02397d6bb3322111a"
          },
          "dependencies": [
            "module.app.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_subnet_public_1",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:438723512299:subnet/subnet-0a00410348dcf61c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.63.1.0/24",
            "id": "subnet-0a00410348dcf61c1",
            "map_public_ip_on_launch": true,
            "owner_id": "438723512299",
            "vpc_id": "vpc-02397d6bb3322111a"
          },
          "dependencies": [
            "module.app.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_subnet_public_2",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:438723512299:subnet/subnet-0dff0a617b5f7e9ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.63.10.0/24",
            "id": "subnet-0dff0a617b5f7e9ed",
            "map_public_ip_on_launch": true,
            "owner_id": "438723512299",
            "vpc_id": "vpc-02397d6bb3322111a"
          },
          "dependencies": [
            "module.app.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_subnet_public_3",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:438723512299:subnet/subnet-0dd577dfd6f69a47c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.63.20.0/24",
            "id": "subnet-0dd577dfd6f69a47c",
            "map_public_ip_on_launch": true,
            "owner_id": "438723512299",
            "vpc_id": "vpc-02397d6bb3322111a"
          },
          "dependencies": [
            "module.app.aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.app",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "module.app.provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:438723512299:vpc/vpc-02397d6bb3322111a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.63.0.0/16",
            "default_network_acl_id": "acl-031d6799712926902",
            "default_route_table_id": "rtb-0955886e3ee5a28d2",
            "default_security_group_id": "sg-054e8c069ff576c57",
            "dhcp_options_id": "dopt-19dcd07e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02397d6bb3322111a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0955886e3ee5a28d2",
            "owner_id": "438723512299",
            "tags": {
              "Name": "prod_vpc"
            }
          }
        }
      ]
    }
  ]
}